--- a/anvithsphere/package.json
+++ b/anvithsphere/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query-devtools": "^5.67.3",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
